# tidyml

./: README.md
python/: README.md  TODO  example1.py  pyproject.toml
python/examples/: config.tml
python/tests/: test_parser.py
python/tidyml/: exceptions.py  parser.py
rust/: Cargo.toml
rust/examples/: parse.rs
rust/src/: ast.rs  error.rs  lib.rs  parser.rs
rust/tests/: parser_tests.rs
