[project]
name = "tidyml"
version = "0.1.0"
description = "A lightweight, human-readable markup language parser"
authors = [
    { name = "Gokul Kartha", email = "kartha.gokul@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pyparsing"]

[tool.setuptools]
packages = ["tidyml"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
